cmake_minimum_required(VERSION 3.10)
project(NettyDemo C)

set(CMAKE_C_STANDARD 11)

add_executable(NettyDemo
#        src/domain-socket-c/client.c
#        src/domain-socket-c/ESTDemo.c
        src/domain-socket-c/FloatingBarDemo.c
#        src/domain-socket-c/server-test.c
#        src/domain-socket-c/server.c
        )
